Fixes button alignment issue in Safari.

--- a/src/site/_includes/global.scss
+++ b/src/site/_includes/global.scss
@@ -184,6 +184,10 @@ body.max_width {
   flex-wrap: wrap-reverse;
 }
 
+.grow_1 {
+  flex-grow: 1;
+}
+
 .hidden {
   display:none !important;
 }
